# chart-sayer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SPEC.md  docker-compose.yml  main.py  pyproject.toml  setup.cfg
.github/workflows/: python-tests.yml
bot_integration/: discord_bot.py  discord_routes.py  telegram_bot.py  telegram_routes.py
config/: chart_config.json  config.json
image_processing/: openai_integration.py  process_image.py
src/: cli.py  main.py
src/bot_integration/: discord_bot.py  discord_cog.py  discord_routes.py  telegram_bot.py  telegram_routes.py
src/bots/: discord_bot.py  discord_ui.py  telegram_bot.py
src/bots/chart_rendering/: tradingview.py
src/bots/commands/: position_commands.py  price_commands.py
src/bots/ui/: position_creation_view.py
src/bots/utils/: position_utils.py
src/chart_sayer/: main.py
src/config/: chart_config.json
src/image_processing/: openai_integration.py  process_image.py
src/market_data/: price_service.py
src/positions/: models.py  repository.py  service.py
src/routes/: discord_routes.py  positions.py  telegram_routes.py
src/routes/positions/: router.py
src/storage/: redis_client.py
src/tests/: test_config.py
tests/: test_config.py
tests/integration/: test_position_repository.py
tests/unit/: test_redis_client.py
