[tool.poetry]
name = "chart-sayer"
version = "0.1.0"
description = "Chart Sayer is a lightweight service designed to analyze chart images and extract key trading information such as entry and exit points based on user-defined rules. The service can be integrated with social platforms to automate the process of chart analysis and position management."
authors = [
    "lowhung <hounslow@algalonlabs.com>",
    "openhands <openhands@all-hands.dev>"
]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "==3.13.2"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
discord-py = ">=2.5.2,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
openai = ">=1.70.0,<2.0.0"
python-telegram-bot = ">=22.0,<23.0"
redis = ">=5.0.1,<6.0.0"
pydantic = "==2.11.2"
fakeredis = "^2.28.1"
black = "^25.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0,<8.0.0"
pytest-cov = ">=4.1.0,<5.0.0"
pytest-mock = ">=3.12.0,<4.0.0"
pytest-asyncio = ">=0.21.1,<0.22.0"
pre-commit = ">=3.3.3,<4.0.0"
types-redis = ">=4.6.0,<5.0.0"

[tool.poetry.scripts]
analyze-chart = "src.cli:main"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
  .git
  | \.hg
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
